--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,17 +6,24 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/launcher_ic"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/launcher_ic_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjectManager"
         tools:targetApi="31">
         <activity
+            android:name=".login.LoginActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".splashscreen.SplashActivity"
+            android:exported="true"
             android:screenOrientation="fullSensor"
-            android:theme="@style/Theme.ProjectManager.NoActionBar"
-            android:exported="true">
+            android:theme="@style/Theme.ProjectManager.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
