--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     implementation 'app.rive:rive-android:4.0.0'
     implementation "androidx.startup:startup-runtime:1.1.1"
 
+    //Google Services
+    implementation 'com.google.firebase:firebase-auth:21.2.0'
+
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
