--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.ProjectManager"
         tools:targetApi="31">
         <activity
-            android:name=".login.ui.MainActivity"
+            android:name=".login.ui.LoginActivity"
             android:exported="true"
             android:label="@string/title_activity_main"
             android:screenOrientation="portrait"
