--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,10 +53,11 @@ dependencies {
     implementation "androidx.startup:startup-runtime:1.1.1"
 
     //firebase
-    implementation 'com.google.firebase:firebase-auth:21.2.0'
     implementation platform('com.google.firebase:firebase-bom:31.3.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-core:21.1.1'
+    implementation 'com.google.firebase:firebase-auth:22.0.0'
+    implementation 'com.google.firebase:firebase-firestore:24.6.1'
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
